2002-08-05  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_get_app) : work around
	  gnome_file_entry's propensity for prepending the current dir if none
	  is specified.  This allows a user to type a nme with no
	  qualifications and have it look things up in the path.

	* mime-type-info.c (mime_category_info_save) : lobotomize this just in
	  case.

2002-08-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=88775
	* file-types-properties.glade : make the other sub dialogs modal too.

2002-08-01  Federico Mena Quintero  <federico@ximian.com>

	* file-types-properties.glade: Made the file entries modal as they
	live in modal dialogs.  Fixes #89370.

	* service-edit-dialog.c (service_add_dialog_new): Return a
	GObject, not a GtkWidget.

	* file-types-capplet.c (add_service_cb): Do not assign a GtkWidget
	to a GObject.

2002-07-17  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_type_info_new) : no need to preload the icon.
	(mime_type_info_load_all) : nor here.

2002-07-17  Jody Goldberg <jody@gnome.org>

	* file-types-properties.glade : tweak the padding a touch

2002-07-17  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_init) : only enable the remove
	  button when there is a selection.

2002-07-16  Jody Goldberg <jody@gnome.org>

	* file-types-properties.glade (</) : rearrange the extensions area.
	* mime-edit-dialog.c (mime_edit_dialog_init) : add when the entry is
	  activated.

2002-07-10  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_init) : set the icon here.

2002-07-09  Jody Goldberg <jody@gnome.org>

	* file-types-properties.glade : disable the use of category defaults
	* file-types-capplet.c (launch_edit_dialog) : disable editing category
	  handlers.

2002-06-26  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_type_info_load_all) : do not trust
	  gnome_vfs_mime_get_default_application.  It silently removes