@@ -1,3 +1,8 @@
+2002-08-07  Jody Goldberg <jody@gnome.org>
+	Patch from JRB for 88443
+
+	* theme-switcher.c (read_themes) : store the current cursor
+
 2002-07-31  Federico Mena Quintero  <federico@ximian.com>
 
 	* theme-install.glade: Make the file entry modal.  Fixes #89410.
