@@ -1,3 +1,8 @@
+2002-08-07  Jody Goldberg <jody@gnome.org>
+
+	* mime-edit-dialog.c (mime_edit_dialog_get_app) : Be extra anal, just
+	  in case the db is corrupt.
+
 2002-08-05  Jody Goldberg <jody@gnome.org>
 
 	* mime-edit-dialog.c (mime_edit_dialog_get_app) : work around
